RESOLVED FIXED125716
[Mac] Cache partitioning asserts when associated NSURLRequest is nil
https://bugs.webkit.org/show_bug.cgi?id=125716
Summary [Mac] Cache partitioning asserts when associated NSURLRequest is nil
Vicki Pfau
Reported 2013-12-13 15:59:47 PST
In some cases, a ResourceRequest may attempt to update the cache partition when the associated NSURLRequest is nil. This will trigger an assertion. <rdar://problem/15375976>
Attachments
Patch (1.61 KB, patch)
2013-12-13 16:03 PST, Vicki Pfau
darin: review+
Vicki Pfau
Comment 1 2013-12-13 16:03:26 PST
Vicki Pfau
Comment 2 2013-12-16 14:38:51 PST
Alexey Proskuryakov
Comment 3 2013-12-16 15:26:09 PST
Comment on attachment 219207 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=219207&action=review > Source/WebCore/platform/network/mac/ResourceRequestMac.mm:114 > + m_cachePartition = cachePartition; Does m_cachePartition need to be reset to null when m_nsRequest is null?
Vicki Pfau
Comment 4 2013-12-16 15:28:09 PST
(In reply to comment #3) > (From update of attachment 219207 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=219207&action=review > > > Source/WebCore/platform/network/mac/ResourceRequestMac.mm:114 > > + m_cachePartition = cachePartition; > > Does m_cachePartition need to be reset to null when m_nsRequest is null? Since it doesn't reset m_cachePartition to null when the partition it gets out of the request is null either, I don't think this is necessary, but that might itself be a bug.
Note You need to log in before you can comment on or make changes to this bug.