[Mac] Cache partitioning asserts when associated NSURLRequest is nil https://bugs.webkit.org/show_bug.cgi?id=125716

Reviewed by Darin Adler.

* platform/network/mac/ResourceRequestMac.mm:
(WebCore::ResourceRequest::doUpdateResourceRequest):

Canonical link: https://commits.webkit.org/143822@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160663 268f45cc-cd09-0410-ab3c-d52691b4dbfc